2011-08-17  Abhishek Arya  <inferno@chromium.org>

        Crash in Document::recalcStyleSelector
        https://bugs.webkit.org/show_bug.cgi?id=66335

        Reviewed by Simon Fraser.

        When node is getting destroyed and its removedFromDocument
        is not called due to entire document structure torn down(using
        removeAllChildren), make sure to clear out the stylesheet
        candidate node from document's structures in its destructor.

        Test: svg/dom/stylesheet-candidate-node-crash-main.html

        * dom/ProcessingInstruction.cpp:
        (WebCore::ProcessingInstruction::~ProcessingInstruction):
        * html/HTMLLinkElement.cpp:
        (WebCore::HTMLLinkElement::~HTMLLinkElement):
        * html/HTMLStyleElement.cpp:
        (WebCore::HTMLStyleElement::~HTMLStyleElement):
        * svg/SVGStyleElement.cpp:
        (WebCore::SVGStyleElement::~SVGStyleElement):

2011-08-12  Abhishek Arya  <inferno@chromium.org>

        Crash in WebCore::editingIgnoresContent
        https://bugs.webkit.org/show_bug.cgi?id=66125

        Reviewed by Ryosuke Niwa.

        RefPtr a few nodes in case they get blown away in
        dispatchEvent calls.

        Test: editing/selection/select-start-remove-root-crash.html

        * editing/FrameSelection.cpp:
        (WebCore::FrameSelection::selectAll):
        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::ReplacementFragment::ReplacementFragment):

2011-08-13  Abhishek Arya  <inferno@chromium.org>

        Crash in HTMLTreeBuilder::processAnyOtherEndTagForInBody
        https://bugs.webkit.org/show_bug.cgi?id=66187

        Reviewed by Adam Barth.

        RefPtr a few ContainerNodes to prevent premature deletion.

        Test: fast/html/process-end-tag-for-inbody-crash.html

        * html/parser/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::processCloseWhenNestedTag):
        (WebCore::HTMLTreeBuilder::processAnyOtherEndTagForInBody):